--- a/usuarios/templates/base.html
+++ b/usuarios/templates/base.html
@@ -11,20 +11,20 @@
 
 <body>
   
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-black">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" style="color: #3b1905" href='/nuevaReserva/' >Nueva Reserva</a>
-        <a class="nav-item nav-link" style="color: #3b1905" href='/reservasDelDia/' >Reservas del Día</a>
+        <a class="nav-item nav-link" style="color: white" href='/nuevaReserva/' >Nueva Reserva</a>
+        <a class="nav-item nav-link" style="color: white" href='/reservasDelDia/' >Reservas del Día</a>
         <!-- <a class="nav-item nav-link" style="color: #3b1905" href='/enEspera/' >Reservas en espera</a> -->
         <!-- <a class="nav-item nav-link" style="color: #3b1905" href='/enProceso/' >En Progreso</a> -->
-        <a class="nav-item nav-link" style="color: #3b1905" href='/historico/' >Calendario</a>
-        <a class="nav-item nav-link" style="color: #3b1905" href='/libroIncidencias/' >Incidencias</a>
-        <a class="nav-item nav-link" style="color: #3b1905" href='/libroIncidenciasLog/' >Incidencias Logística</a>
-        <a class="nav-item nav-link" style="color: #3b1905" href='/verPlaza/' >Plazas del Día</a>
-        <a class="nav-item nav-link" style="color: #3b1905" href='/historicoPlazas/' >Historico Plazas</a>
+        <a class="nav-item nav-link" style="color: white" href='/historico/' >Calendario</a>
+        <a class="nav-item nav-link" style="color: white" href='/libroIncidencias/' >Incidencias</a>
+        <a class="nav-item nav-link" style="color: white" href='/libroIncidenciasLog/' >Incidencias Logística</a>
+        <a class="nav-item nav-link" style="color: white" href='/verPlaza/' >Plazas del Día</a>
+        <a class="nav-item nav-link" style="color: white" href='/historicoPlazas/' >Historico Plazas</a>
         <!-- <a class="nav-item nav-link" style="color: #3b1905" href='/estadoActual/' >Estado Actual</a> -->
-        <a class="nav-item nav-link" style="color: #3b1905" href='/registro/'>Nuevo Usuario</a>
-        <a class="nav-item nav-link" style="color: #3b1905" href='/logout/'>Cerrar Sesion</a>
+        <a class="nav-item nav-link" style="color: white" href='/registro/'>Nuevo Usuario</a>
+        <a class="nav-item nav-link" style="color: white" href='/logout/'>Cerrar Sesion</a>
       </div>
     </div>
   </nav>
