--- a/nuevaReserva/templates/reservasDelDia.html
+++ b/nuevaReserva/templates/reservasDelDia.html
@@ -163,7 +163,7 @@
                         </td>
                         </FONT>
                         <!-- programar cambio de estado -->
-                        <td><a href='/editarReserva/{{c.id}}' class="btn btn-light">Editar Reserva</a></td>
+                        <td><a href='/editarReserva/{{c.id}}' class="btn btn-light">Editar</a></td>
                         <td><a href='/cambiarEstadoReserva/{{c.id}}' class="btn btn-success">Atendido</a></td>
                         <td><a href='/cambiarEstadoAnulado/{{c.id}}' class="btn btn-danger">Anulado</a></td>
                         <td><a href='/cambiarEstadoShow/{{c.id}}' class="btn btn-warning">No show</a></td>
