--- a/nuevaReserva/templates/reservasDelDia.html
+++ b/nuevaReserva/templates/reservasDelDia.html
@@ -2,6 +2,7 @@
 <html lang="en">
 {% extends 'base.html' %}
 {% block content %}
+{% load static %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
@@ -96,11 +97,9 @@
                         <th>
                             Mesa:
                         </th>
-                        <th colspan="1"></th>
-                        <th colspan="1"></th>
-                        <th colspan="1"></th>
-                        <th colspan="1"><a href='/exportarExcel/' class="btn btn-secondary">Exportar a Excel</a></th>
-                        <th colspan="1"></th>
+                        
+                        <th colspan="5"><a href='/exportarExcel/' class="btn btn-secondary">Exportar a Excel</a></th>
+                        
 
                     </tr>
                 </thead>
@@ -149,8 +148,8 @@
                             <form action='/guardarMesa/{{c.id}}' method="POST" >
                                 {% csrf_token %}
                                 <input type="text" id="mesa" name="mesa" size="7" />
-                                <button class="btn btn-primary">
-                                    GUARDAR
+                                <button class="btn btn-primary btn-sm">
+                                    <img src="{% static 'guardar.png' %}" style="width: 20px; height: 20px;"> 
                                 </button>
                             </form>             
                             
@@ -163,11 +162,11 @@
                         </td>
                         </FONT>
                         <!-- programar cambio de estado -->
-                        <td><a href='/editarReserva/{{c.id}}' class="btn btn-light">Editar</a></td>
-                        <td><a href='/cambiarEstadoReserva/{{c.id}}' class="btn btn-success">Atendido</a></td>
-                        <td><a href='/cambiarEstadoAnulado/{{c.id}}' class="btn btn-danger">Anulado</a></td>
-                        <td><a href='/cambiarEstadoShow/{{c.id}}' class="btn btn-warning">No show</a></td>
-                        <td><a href='/agregarIncidReser/{{c.id}}' class="btn btn-light">Incidencia</a></td>
+                        <td style="text-align: right;" ><a href='/editarReserva/{{c.id}}' class="btn btn-light" style="background: url(/static/editar.png); background-size: cover; width: 50px; height: 50px;" title="Editar"></a></td>
+                        <td style="text-align: right;"><a href='/cambiarEstadoReserva/{{c.id}}' class="btn btn-success" style="background: url(/static/atendido.png); background-size: cover; width: 50px; height: 50px;" title="Atendido"></a></td>
+                        <td style="text-align: right;"><a href='/cambiarEstadoAnulado/{{c.id}}' class="btn btn-danger" style="background: url(/static/anulado.png); background-size: cover; width: 50px; height: 50px;" title="Anulado"></a></td>
+                        <td style="text-align: right;"><a href='/cambiarEstadoShow/{{c.id}}' class="btn btn-warning" style="background: url(/static/noshow.png); background-size: cover; width: 70px; height: 50px;" title="No Show"></a></td>
+                        <td style="text-align: right;"><a href='/agregarIncidReser/{{c.id}}' class="btn btn-light">Incidencia</a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
