--- a/usuarios/templates/base.html
+++ b/usuarios/templates/base.html
@@ -22,6 +22,7 @@
         <a class="nav-item nav-link" style="color: white" href='/libroIncidenciasLog/' >Incidencias Logística</a>
         <a class="nav-item nav-link" style="color: white" href='/calculardia/' >Plazas del Día</a>
         <a class="nav-item nav-link" style="color: white" href='/historicoPlazas/' >Historico Plazas</a>
+        <a class="nav-item nav-link" style="color: white" href='/estadisticas/'>Estadísticas</a>
         <!-- <a class="nav-item nav-link" style="color: #3b1905" href='/estadoActual/' >Estado Actual</a> -->
         <a class="nav-item nav-link" style="color: white" href='/registro/'>Nuevo Usuario</a>
         <a class="nav-item nav-link" style="color: white" href='/logout/'>Cerrar Sesion</a>
