--- a/nuevaReserva/templates/estadisticas.html
+++ b/nuevaReserva/templates/estadisticas.html
@@ -85,7 +85,7 @@
             <div class="form-group col-md-4 col-lg-4 col-xl-4">
                 <img src="{{graf1}}" alt="grafico" width="500">
             </div>
-            <!-- <div class="form-group col-md-4 col-lg-4 col-xl-4">
+            <div class="form-group col-md-4 col-lg-4 col-xl-4">
                 <img src="{{graf2}}" alt="grafico" width="500">
             </div>
             <div class="form-group col-md-4 col-lg-4 col-xl-4">
@@ -102,9 +102,8 @@
             </div>
             <div class="form-group col-md-4 col-lg-4 col-xl-4">
                 <img src="{{graf6}}" alt="grafico" width="500">
-            </div> -->
-        <!-- </div> -->
-    </div>
+            </div>
+        </div>
     </div>
 </body>
 {% endblock %}
