--- a/nuevaReserva/templates/estadisticas.html
+++ b/nuevaReserva/templates/estadisticas.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <img src="{{graf6}}" alt="grafico" width="500">
+    <img src="{{graf}}" alt="grafico" width="500">
 </body>
 </html>
