--- a/nuevaReserva/templates/estadisticas.html
+++ b/nuevaReserva/templates/estadisticas.html
@@ -8,5 +8,6 @@
 <body>
     <img src="{{graf6}}" alt="grafico" width="500">
     <img src="{{graf}}" alt="grafico" width="500">
+    <img src="{{graf2}}" alt="grafico" width="500">
 </body>
 </html>
