--- a/nuevaReserva/templates/estadisticas.html
+++ b/nuevaReserva/templates/estadisticas.html
@@ -9,5 +9,6 @@
     <img src="{{graf6}}" alt="grafico" width="500">
     <img src="{{graf}}" alt="grafico" width="500">
     <img src="{{graf2}}" alt="grafico" width="500">
+    <img src="{{graf3}}" alt="grafico" width="500">
 </body>
 </html>
