--- a/nuevaReserva/templates/listadoHistorico.html
+++ b/nuevaReserva/templates/listadoHistorico.html
@@ -47,7 +47,7 @@
                         height: 70px;
                     }
                 </style>
-                <button type="submit" class="btn btn-warning" name = "accion" value="Buscar">Buscar</button><br<><br>
+                <button type="submit" class="btn btn-warning" name = "accion" value="Buscar">Buscar</button><br><br>
                 Filtrar por turno:
                 <button type="submit" class="btn btn-info" name="accion" value="Almuerzo">Almuerzo</button>
                 <button type="submit" class="btn btn-info" name="accion" value="Cena">Cena</button>
