--- a/nuevaReserva/templates/reservasDelDia.html
+++ b/nuevaReserva/templates/reservasDelDia.html
@@ -67,6 +67,9 @@
             <b>
                 <font color="yellow">Total Reservas No Show: {{totalNoshow}}<br></font>
             </b>
+            <b>
+                <font color="white">Total Reservas Pendientes: {{totalPendiente}}<br></font>
+            </b>
 
         </div>
 
