--- a/nuevaReserva/templates/estadisticas.html
+++ b/nuevaReserva/templates/estadisticas.html
@@ -41,13 +41,18 @@
 
     <div style="text-align: center;" class="col-sm-12 col-md-12 col-lg-12 col-xl-12"> </div>
 
-    <h1><b>Graf1</b></h1> <br>
-    <div class="row">
-        <div class="form-group col-md-4 col-lg-4 col-xl-4">
-        <img src="{{graf6}}" alt="grafico" width="500">
-        </div>
-        <div class="form-group col-md-4 col-lg-4 col-xl-4">
-        <img src="{{graf}}" alt="grafico" width="500">
+    <div class="centrar">
+        <h1><b>Estadísticas Mes en Curso</b></h1> <br>
+        <div class="row">
+            <div class="form-group col-md-4 col-lg-4 col-xl-4">
+                <img src="{{graf}}" alt="grafico" width="500">
+            </div>
+            <div class="form-group col-md-4 col-lg-4 col-xl-4">
+                <img src="{{graf6}}" alt="grafico" width="500">
+            </div>
+            <div class="form-group col-md-4 col-lg-4 col-xl-4">
+                <img src="{{graf2}}" alt="grafico" width="500">
+            </div>
         </div>
     </div>
     
