--- a/nuevaReserva/templates/estadisticas.html
+++ b/nuevaReserva/templates/estadisticas.html
@@ -54,6 +54,19 @@
                 <img src="{{graf2}}" alt="grafico" width="500">
             </div>
         </div>
+
+        <div class="row">
+            <div class="form-group col-md-4 col-lg-4 col-xl-4">
+                <img src="{{graf4}}" alt="grafico" width="500">
+            </div>
+            <!-- <div class="form-group col-md-4 col-lg-4 col-xl-4">
+                <img src="{{graf6}}" alt="grafico" width="500">
+            </div>
+            <div class="form-group col-md-4 col-lg-4 col-xl-4">
+                <img src="{{graf2}}" alt="grafico" width="500">
+            </div> -->
+        </div>
+        
     </div>
     
     
