--- a/nuevaReserva/templates/estadisticas.html
+++ b/nuevaReserva/templates/estadisticas.html
@@ -42,7 +42,7 @@
     <div style="text-align: center;" class="col-sm-12 col-md-12 col-lg-12 col-xl-12"> </div>
 
     <div class="centrar">
-        <h1><b>Estadísticas Mes en Curso</b></h1> <br>
+        <h1><b>KPI Mes en Curso</b></h1> <br>
         <div class="row">
             <div class="form-group col-md-4 col-lg-4 col-xl-4">
                 <img src="{{graf}}" alt="grafico" width="500">
