--- a/nuevaReserva/templates/reservasDelDia.html
+++ b/nuevaReserva/templates/reservasDelDia.html
@@ -52,6 +52,10 @@
             TURNO: {{turno}}<br>
             {% endif %}
             Total de reservas del día: {{totalDia}}
+            <h1><b>
+                <font color="yellow">**Busqueda Activa**</font>
+            </b></h1>
+        {% endif %}
         </div>
         <div class="col-sm-12 col-md-6 col-lg-2 col-xl-2">
 
